--- a/src/view/options/tkb.html
+++ b/src/view/options/tkb.html
@@ -10,8 +10,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
     body {
-        background-image: url("https://aphoto.vn/wp-content/uploads/2018/04/typo-anh-ky-yeu-dep-8.jpg");
-        background-repeat: unset;
+        background-image: url("https://cybershow.vn/wp-content/uploads/2019/03/ch%E1%BB%A7-%C4%91%E1%BB%81-team-building-2.jpg");
+        background-repeat: repeat;
         background-position: left top;
         background-attachment: fixed;
     }
@@ -36,23 +36,9 @@
 <div><button style="font-size: 20px; margin-left: 20px" class="btn btn-warning"><a href="../../../index.php">Trở về</a></button>
 </div>
 <br>
-<table align="center" cellpadding="15px">
-    <tr>
-        <td><button style="font-size: 50px; width: 300px; background-color: darkorange" class="btn btn-success"><a href="subjects/subjects.html">Toán học</a></button></td>
-        <td><button style="font-size: 50px; width: 300px; background-color: cornflowerblue" class="btn btn-success"><a href="subjects/subjects.html">Vật lý</a></button></td>
-        <td><button style="font-size: 50px; width: 300px; background-color: rebeccapurple" class="btn btn-success"><a href="subjects/subjects.html">Hóa Học</a></button></td>
-    </tr>
-    <tr>
-        <td><button style="font-size: 50px; width: 300px" class="btn btn-success"><a href="subjects/subjects.html">Sinh học</a></button></td>
-        <td><button style="font-size: 50px; width: 300px; background-color: darkslategray" class="btn btn-success"><a href="subjects/subjects.html">Tin học</a></button></td>
-        <td><button style="font-size: 50px; width: 300px; background-color: deepskyblue" class="btn btn-success"><a href="subjects/subjects.html">Tiếng Anh</a></button></td>
-    </tr>
-    <tr>
-        <td><button style="font-size: 50px; width: 300px; background-color: rosybrown" class="btn btn-success"><a href="subjects/subjects.html">Ngữ văn</a></button></td>
-        <td><button style="font-size: 50px; width: 300px; background-color: brown" class="btn btn-success"><a href="subjects/subjects.html">Lịch sử</a></button></td>
-        <td><button style="font-size: 50px; width: 300px; background-color: dodgerblue" class="btn btn-success"><a href="subjects/subjects.html">Giáo dục</a></button></td>
-    </tr>
-</table>
+<div align="center">
+    <img style="border-radius: 15px" src="../../files/img/tkb.png">
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
