--- a/src/view/subjects/subjects.html
+++ b/src/view/subjects/subjects.html
@@ -36,7 +36,7 @@
 <div><button style="font-size: 20px; margin-left: 20px" class="btn btn-warning"><a href="../../../index.php">Trở về</a></button>
 </div>
 <br>
-<table align="center" cellpadding="15px">
+<table style="border-radius: 15px" align="center" cellpadding="15px">
     <tr>
         <td><button style="font-size: 50px; width: 300px; background-color: darkorange" class="btn btn-success"><a href="subjects/subjects.html">Toán học</a></button></td>
         <td><button style="font-size: 50px; width: 300px; background-color: cornflowerblue" class="btn btn-success"><a href="subjects/subjects.html">Vật lý</a></button></td>
